# electrostatic-calculator

./: .buildinfo  README.md  citations.html  genindex.html  index.html  objects.inv  py-modindex.html  pyproject.toml  requirements.txt  search.html  searchindex.js  setup.py
.github/workflows/: docs.yml  python-app.yml
Examples/compute_energy_forces/: BaTiO3_1  compute_energy_forces.py  supercell.pwi  supercell.pwo
Examples/phonons_nonanalitic_correction/: dyn1  dyn2  dyn3  dyn4  get_analytic_phonon.py  get_only_nonanal.py  get_phonons_with_cc.py  show_interpolation.py
_modules/: index.html
_modules/pyelectrostatic/: calculator.html  interface.html  utils.html
_sources/: citations.rst.txt  index.rst.txt
_sources/tutorials/: 03_composite_calculator.rst.txt  index.rst.txt
_sources/user_guide/: theory_minimal.rst.txt
api_reference/: index.html
benchmark_report/: benchmark_corrected.py
docs/: Makefile  conf.py
docs/api_reference/: index.rst
docs/examples/: 01_basic_energy_force.py  02_supercell.py  03_composite.py  04_sscha_electrostatic.py
docs/tutorials/: 01_getting_started.rst  02_supercell_calculations.rst  04_sscha_electrostatic.rst
docs/user_guide/: installation.rst  parameters.rst
modules/: __init__.py  calculator.py  fast_calculator.jl  fourier_calculator.py  interface.py  nufft_calculator.jl  pme_calculator.jl  real_space_calculator.py  utils.py
tests/: test_pme_calculator.py
tests/BaTiO3/: test_dipole.py  test_longrange_espresso.py  test_nufft.py  (+4 more)
tutorials/: 01_getting_started.html  02_supercell_calculations.html  03_composite_calculator.html  04_sscha_electrostatic.html  index.html
user_guide/: installation.html  parameters.html  theory_minimal.html
(+3 files in other folders)
